--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             position: absolute;
             top: 60px;
             left: 10px;
-            width: 500px;
-            height: 200px;
+            width: 200px;
+            height: 50px;
             z-index: 2;
             background: rgb(20, 140, 133);
             padding: 10px;
@@ -119,7 +119,7 @@
         }
         #header {
             width: 100%;
-            background-color: #333;
+            background-color: rgba(20,140,133,0);
             color: white;
             padding: 10px 0;
             position: fixed;
@@ -135,10 +135,10 @@
             margin-right: 20px;
         }
         .dropbtn {
-            background-color: #4CAF50;
-            color: white;
+            background-color: #FFFFFF;
+            color: rgba(20,140,133,0);
             padding: 10px;
-            font-size: 16px;
+            font-size: 12px;
             border: none;
             cursor: pointer;
         }
@@ -167,6 +167,7 @@
         }
         #header h1 {
             margin-left: auto;
+            font-size: 12px;
         }
         .note-marker {
             background-color: rgba(255, 255, 0, 0.7);
@@ -220,7 +221,7 @@
                 </div>
             </div>
         </div>
-        <h1>Google Map Drawing with Handwriting</h1>
+        <h1>BeBirds Demo</h1>
     </div>
     <div id="map"></div>
     <canvas id="canvas"></canvas>
