--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
         }
         #header {
             width: 100%;
-            background-color: rgba(20,140,133,0);
+            height: 50px;
+            background-color: rgb(20,140,133);
             color: white;
             padding: 10px 0;
             position: fixed;
@@ -136,7 +137,7 @@
         }
         .dropbtn {
             background-color: #FFFFFF;
-            color: rgba(20,140,133,0);
+            color: rgb(20,140,133);
             padding: 10px;
             font-size: 12px;
             border: none;
@@ -167,7 +168,7 @@
         }
         #header h1 {
             margin-left: auto;
-            font-size: 12px;
+            font-size: 20px;
         }
         .note-marker {
             background-color: rgba(255, 255, 0, 0.7);
