--- a/index.html
+++ b/index.html
@@ -233,10 +233,10 @@
             <img src="brush.png" alt="Start Drawing">
         </button>
         <button id="eraserButton">
-            <img src="eraser_icon.png" alt="Eraser">
+            <img src="eraser.png" alt="Eraser">
         </button>
         <button id="clearCanvas">
-            <img src="eraser.png" alt="Clear Canvas">
+            <img src="trush.png" alt="Clear Canvas">
         </button>
     </div>
     <div id="image-container">
