--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
             padding: 10px;
             border-radius: 5px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            cursor: move;
         }
         #color-picker {
             width: 30px;
@@ -167,7 +166,7 @@
             background-color: #3e8e41;
         }
         #header h1 {
-            margin-left: auto;
+            margin: 0;
             font-size: 20px;
         }
         .note-marker {
