--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                 </div>
             </div>
         </div>
-        <h1>BeBirds Demo</h1>
+        <h1>BeBirds Demo01</h1>
     </div>
     <div id="map"></div>
     <canvas id="canvas"></canvas>
