--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
             padding: 10px;
             border-radius: 5px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
         }
         #color-picker {
             width: 30px;
@@ -65,6 +68,7 @@
             background: white;
             align-items: center;
             justify-content: center;
+            display: flex;
         }
         #controls button img {
             width: 30px;
@@ -221,7 +225,7 @@
                 </div>
             </div>
         </div>
-        <h1>BeBirds Demo01</h1>
+        <h1>BeBirds Demo02</h1>
     </div>
     <div id="map"></div>
     <canvas id="canvas"></canvas>
@@ -735,29 +739,69 @@
 
         function makeDraggable(element) {
             let pos1 = 0, pos2 = 0, pos3 = 0, pos4 = 0;
+            let touchStartX = 0, touchStartY = 0;
+            let isDragging = false;
+
             element.onmousedown = dragMouseDown;
-            element.ontouchstart = dragMouseDown; // Add touch start event
+            element.ontouchstart = dragTouchStart; // Add touch start event
 
             function dragMouseDown(e) {
                 e = e || window.event;
                 e.preventDefault();
-                pos3 = e.clientX || e.touches[0].clientX;
-                pos4 = e.clientY || e.touches[0].clientY;
+                pos3 = e.clientX;
+                pos4 = e.clientY;
                 document.onmouseup = closeDragElement;
-                document.ontouchend = closeDragElement; // Add touch end event
                 document.onmousemove = elementDrag;
-                document.ontouchmove = elementDrag; // Add touch move event
+            }
+
+            function dragTouchStart(e) {
+                e = e || window.event;
+                e.preventDefault();
+                const touch = e.touches[0];
+                touchStartX = touch.clientX;
+                touchStartY = touch.clientY;
+                isDragging = true;
+                document.ontouchend = closeDragElement;
+                document.ontouchmove = elementDragTouch;
             }
 
             function elementDrag(e) {
                 e = e || window.event;
                 e.preventDefault();
-                pos1 = pos3 - (e.clientX || e.touches[0].clientX);
-                pos2 = pos4 - (e.clientY || e.touches[0].clientY);
-                pos3 = e.clientX || e.touches[0].clientX;
-                pos4 = e.clientY || e.touches[0].clientY;
+                pos1 = pos3 - e.clientX;
+                pos2 = pos4 - e.clientY;
+                pos3 = e.clientX;
+                pos4 = e.clientY;
                 let newTop = element.offsetTop - pos2;
                 let newLeft = element.offsetLeft - pos1;
+
+                if (newTop < 10) {
+                    newTop = 10;
+                } else if (newTop + element.offsetHeight > window.innerHeight - 10) {
+                    newTop = window.innerHeight - element.offsetHeight - 10;
+                }
+
+                if (newLeft < 10) {
+                    newLeft = 10;
+                } else if (newLeft + element.offsetWidth > window.innerWidth - 10) {
+                    newLeft = window.innerWidth - element.offsetWidth - 10;
+                }
+
+                element.style.top = newTop + "px";
+                element.style.left = newLeft + "px";
+            }
+
+            function elementDragTouch(e) {
+                if (!isDragging) return;
+                e = e || window.event;
+                e.preventDefault();
+                const touch = e.touches[0];
+                const deltaX = touchStartX - touch.clientX;
+                const deltaY = touchStartY - touch.clientY;
+                touchStartX = touch.clientX;
+                touchStartY = touch.clientY;
+                let newTop = element.offsetTop - deltaY;
+                let newLeft = element.offsetLeft - deltaX;
 
                 if (newTop < 10) {
                     newTop = 10;
@@ -780,6 +824,7 @@
                 document.onmousemove = null;
                 document.ontouchend = null; // Remove touch end event
                 document.ontouchmove = null; // Remove touch move event
+                isDragging = false;
             }
         }
 
