--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+            touch-action: none; /* Disable touch events for the container */
         }
         #color-picker {
             width: 30px;
@@ -244,7 +245,7 @@
                 </div>
             </div>
         </div>
-        <h1>BeBirds Demo03</h1>
+        <h1>BeBirds Demo04</h1>
     </div>
     <div id="map"></div>
     <canvas id="canvas"></canvas>
